AUV_ws/log/build_2020-10-15_04-30-56/gate_detection/stderr.log
  File "/home/fatma/AUV_ws/install/gate_detection/lib/python3.6/site-packages/gate_detection/client_node.py", line 1
    from tutorial_interfaces.srv import     # CHANGE
                                                   ^
SyntaxError: invalid syntax

